Fix outdated vars
- Fix firewall rule sneaking into services instead
- Fix Atla primary NIC name
- Disable cryptenroll on Atla for now
- Fix Nari and Nott NIC names
- Fix Theia grub config
- Fix Ymir NIC name

--- a/inventory/host_vars/theia/vars.yml
+++ b/inventory/host_vars/theia/vars.yml
@@ -19,7 +19,7 @@ grub_config:
   - regexp: '^GRUB_TIMEOUT'
     line: "GRUB_TIMEOUT=2"
   - regexp: '^GRUB_CMDLINE_LINUX'
-    line: GRUB_CMDLINE_LINUX="rd.lvm.lv=main01/root rd.lvm.lv=main02/root crashkernel=auto nmi_watchdog=0"
+    line: GRUB_CMDLINE_LINUX="rd.lvm.lv=main01/root crashkernel=auto nmi_watchdog=0 amd_pstate=passive"
 
 ssh_conf_hosts: false
 ceph_mon: false
