--- a/inventory/group_vars/libvirt/vars.yml
+++ b/inventory/group_vars/libvirt/vars.yml
@@ -62,6 +62,7 @@ vm_default_definition:
   customize: "{{ vm_customize }}"
   enable_console: true
   enable_vnc: false
+  enable_guest_virtio: true
   name: "{{ inventory_hostname }}"
   domain: "{{ vm_default_nic.domain | default(false) }}"
   memory_mb: "{{ vm_mem }}"
