--- a/inventory/host_vars/theia/vars.yml
+++ b/inventory/host_vars/theia/vars.yml
@@ -19,7 +19,7 @@ grub_config:
   - regexp: '^GRUB_TIMEOUT'
     line: "GRUB_TIMEOUT=2"
   - regexp: '^GRUB_CMDLINE_LINUX'
-    line: GRUB_CMDLINE_LINUX="rd.lvm.lv=main01/root crashkernel=auto nmi_watchdog=0 amd_pstate=passive"
+    line: GRUB_CMDLINE_LINUX="rd.lvm.lv=vg01/root crashkernel=auto nmi_watchdog=0 amd_pstate=passive"
 
 ssh_conf_hosts: false
 ceph_mon: false
