Update GUI and desktop vars
- Install xdg-user-dirs
- Add gui override for desktop
- Fix xorg overrides
- Export Steam scaling env var

--- a/inventory/group_vars/gui/arch.yml
+++ b/inventory/group_vars/gui/arch.yml
@@ -170,6 +170,7 @@ pacman_i3_packages:
   - thunar-volman
   - tumbler  # Thumbnailer for Thunar
   - xclip
+  - xdg-user-dirs
   - xorg-server
   - xorg-xev
   - xorg-xinit
