Update laptop chezmoi overrides
- Put ddcutil sleep in common bar-env
- Replace waybar config with jinja compatible one

--- a/inventory/host_vars/laptop/chezmoi.yml
+++ b/inventory/host_vars/laptop/chezmoi.yml
@@ -33,12 +33,13 @@ chezmoi_overrides:
     else
       WS["1"]="laptop"
     fi
+  bar-env: |
+    export DDCUTIL_SLEEP_MULTIPLIER=3
   polybar: |
     MONITOR_MAP["eDP-1"]="laptop"
     MONITOR_MAP["HDMI-1"]="laptop-ext"
     MONITOR_MAP["DP-3-2"]="laptop-ext-secondary"
     DPI_MAP["eDP-1"]="120"
-    export DDCUTIL_SLEEP_MULTIPLIER=3
   sway: |
     export MOZ_ENABLE_WAYLAND=1
     export MOZ_USE_XINPUT2=1
@@ -69,9 +70,11 @@ chezmoi_overrides:
       MONITOR_MAP["DP-3-2"]="--left-of HDMI-1 --mode 3840x2160"
       MONITOR_MAP["eDP-1"]="--right-of HDMI-1 --mode 3840x2160"
     fi
-  waybar: |
-    MONITOR_MAP["Lenovo Group Limited L32p-30 U511L1X2"]=laptop_ext
-    MONITOR_MAP["GIGA-BYTE TECHNOLOGY CO., LTD. Gigabyte M32U 21311B001327"]=laptop_ext
-    MONITOR_MAP["Samsung Electric Company LS27A800U HNMTA00225"]=laptop_ext_secondary
-    MONITOR_MAP["Samsung Electric Company U24E850 HTHH300363"]=laptop_ext_secondary
-    export DDCUTIL_SLEEP_MULTIPLIER=3
+  waybar.yaml: |
+    monitor_map:
+      laptop_ext:
+        - "Lenovo Group Limited L32p-30 U511L1X2"
+        - "GIGA-BYTE TECHNOLOGY CO., LTD. Gigabyte M32U 21311B001327"
+      laptop_ext_secondary:
+        - "Samsung Electric Company LS27A800U HNMTA00225"
+        - "Samsung Electric Company U24E850 HTHH300363"
