Refer to all_net when configuring HV interfaces

--- a/inventory/group_vars/all/network.yml
+++ b/inventory/group_vars/all/network.yml
@@ -21,6 +21,7 @@ internal_net:
     cidr: "10.0.2.0/24"
     cidr6: "fd00:2::0/64"
     vlan: 2
+    mtu: 9000
   noinet:
     cidr: "10.0.20.0/24"
     cidr6: "fd00:20::0/64"
