--- a/inventory/group_vars/kvm_hv/networkd.yml
+++ b/inventory/group_vars/kvm_hv/networkd.yml
@@ -7,10 +7,11 @@
 __bond0_primary_iface: "enp1s0"
 __bond0_backup_iface: "eno1"
 
-__mgmt_metric: 512
-__mgmt_dns: true
-__general_dns: false
-__general_route: false
+host_bridge_config:
+  mgmt:
+    dns: true
+    route:
+      Metric: 512
 
 # Used for GENERAL and VM where 21, 22 and 23 are taken
 __ip_offset: 50
@@ -29,219 +30,50 @@ host_ips: >-
   {%- endfor -%}
   {{ tmp }}
 
-networkd_netdevs:
-  - bond0: |
-      [NetDev]
-      Name=bond0
-      Description=Trunk bond interface
-      Kind=bond
-      MTUBytes=9000
+__networkd_vlan_netdevs: >-
+  {%- set tmp = [] -%}
+  {%- for config in all_net.values() if 'vlan' in config -%}
+  {{- tmp.append({
+    'bond0.' + config.vlan | string: lookup('template', repo_base_dir + '/files/kvm_hv/vlan.netdev.j2', template_vars=config)
+    }) -}}
+  {%- endfor -%}
+  {{ tmp }}
 
-      [Bond]
-      Mode=active-backup
-      PrimaryReselectPolicy=always
-      MIIMonitorSec=1s
+__networkd_bridge_netdevs: >-
+  {%- set tmp = [] -%}
+  {%- for name, config in all_net.items() if 'vlan' in config -%}
+  {{- tmp.append({
+      name | upper: lookup('template', repo_base_dir + '/files/kvm_hv/bridge.netdev.j2', template_vars={'name': name, 'config': config})
+    }) -}}
+  {%- endfor -%}
+  {{ tmp }}
 
-  - bond0.2: |
-      [NetDev]
-      Name=bond0.{{ all_net.san.vlan }}
-      Kind=vlan
-      MTUBytes={{ all_net.san.mtu | default(1500) }}
+__networkd_bond_netdevs:
+  - bond0: "{{ lookup('template', repo_base_dir + '/files/kvm_hv/bond0.netdev.j2') }}"
 
-      [VLAN]
-      Id={{ all_net.san.vlan }}
+networkd_netdevs: "{{ __networkd_bond_netdevs + __networkd_vlan_netdevs + __networkd_bridge_netdevs }}"
 
-  - bond0.10: |
-      [NetDev]
-      Name=bond0.{{ all_net.vm.vlan }}
-      Kind=vlan
-      MTUBytes={{ all_net.vm.mtu | default(1500) }}
+__networkd_vlan_configs: >-
+  {%- set tmp = [] -%}
+  {%- for name, config in all_net.items() if 'vlan' in config -%}
+  {{- tmp.append({
+      'bond0.' + config.vlan | string: lookup('template', repo_base_dir + '/files/kvm_hv/bond.network.j2', template_vars={'name': name, 'config': config})
+    }) -}}
+  {%- endfor -%}
+  {{ tmp }}
 
-      [VLAN]
-      Id={{ all_net.vm.vlan }}
+__networkd_bridge_configs: >-
+  {%- set tmp = [] -%}
+  {%- for name, config in all_net.items() if 'vlan' in config -%}
+  {{- tmp.append({
+      name | upper: lookup('template', repo_base_dir + '/files/kvm_hv/bridge.network.j2', template_vars={'name': name, 'config': config})
+    }) -}}
+  {%- endfor -%}
+  {{ tmp }}
 
-  - bond0.20: |
-      [NetDev]
-      Name=bond0.{{ all_net.noinet.vlan }}
-      Kind=vlan
-      MTUBytes={{ all_net.noinet.mtu | default(1500) }}
+__networkd_bond_configs:
+  - bond0: "{{ lookup('template', repo_base_dir + '/files/kvm_hv/bond0.network.j2') }}"
+  - bond0_primary: "{{ lookup('template', repo_base_dir + '/files/kvm_hv/bond0_primary.network.j2') }}"
+  - bond0_backup: "{{ lookup('template', repo_base_dir + '/files/kvm_hv/bond0_backup.network.j2') }}"
 
-      [VLAN]
-      Id={{ all_net.noinet.vlan }}
-
-  - bond0.50: |
-      [NetDev]
-      Name=bond0.{{ all_net.general.vlan }}
-      Kind=vlan
-      MTUBytes={{ all_net.general.mtu | default(1500) }}
-
-      [VLAN]
-      Id={{ all_net.general.vlan }}
-
-  - bond0.100: |
-      [NetDev]
-      Name=bond0.{{ all_net.mgmt.vlan }}
-      Kind=vlan
-      MTUBytes={{ all_net.mgmt.mtu | default(1500) }}
-
-      [VLAN]
-      Id={{ all_net.mgmt.vlan }}
-
-  - SAN: |
-      [NetDev]
-      Name=SAN
-      Kind=bridge
-      MTUBytes={{ all_net.san.mtu | default(1500) }}
-
-  - VM: |
-      [NetDev]
-      Name=VM
-      Kind=bridge
-      MTUBytes={{ all_net.vm.mtu | default(1500) }}
-
-  - NOINET: |
-      [NetDev]
-      Name=NOINET
-      Kind=bridge
-      MTUBytes={{ all_net.noinet.mtu | default(1500) }}
-
-  - GENERAL: |
-      [NetDev]
-      Name=GENERAL
-      Kind=bridge
-      MTUBytes={{ all_net.general.mtu | default(1500) }}
-
-  - MGMT: |
-      [NetDev]
-      Name=MGMT
-      Kind=bridge
-      MTUBytes={{ all_net.mgmt.mtu | default(1500) }}
-
-networkd_config:
-  - bond0: |
-      [Match]
-      Name=bond0
-
-      [Network]
-      {% for vid in all_net | dict2items | map(attribute='value') | selectattr('vlan', 'defined') | map(attribute='vlan') | sort %}
-      VLAN=bond0.{{ vid }}
-      {% endfor %}
-      LinkLocalAddressing=no
-      IPv6AcceptRA=no
-
-  - bond0.2: |
-      [Match]
-      Name=bond0.{{ all_net.san.vlan }}
-
-      [Network]
-      Bridge=SAN
-
-  - bond0.10: |
-      [Match]
-      Name=bond0.{{ all_net.vm.vlan }}
-
-      [Network]
-      Bridge=VM
-
-  - bond0.20: |
-      [Match]
-      Name=bond0.{{ all_net.noinet.vlan }}
-
-      [Network]
-      Bridge=NOINET
-
-  - bond0.50: |
-      [Match]
-      Name=bond0.{{ all_net.general.vlan }}
-
-      [Network]
-      Bridge=GENERAL
-
-  - bond0.100: |
-      [Match]
-      Name=bond0.{{ all_net.mgmt.vlan }}
-
-      [Network]
-      Bridge=MGMT
-
-  - bond0_primary: |
-      [Match]
-      Name={{ __bond0_primary_iface }}
-
-      [Network]
-      Description=Trunk bond interface primary
-      Bond=bond0
-      PrimarySlave=true
-
-  - bond0_backup: |
-      [Match]
-      Name={{ __bond0_backup_iface }}
-
-      [Network]
-      Description=Trunk bond interface secondary
-      Bond=bond0
-
-  - SAN: |
-      [Match]
-      Name=SAN
-
-      [Network]
-      Address={{ __host_ips.san }}
-
-      [Route]
-      Scope=link
-
-  - VM: |
-      [Match]
-      Name=VM
-
-      [Network]
-      Address={{ __host_ips.vm }}
-
-      [Route]
-      Scope=link
-
-  - NOINET: |
-      [Match]
-      Name=NOINET
-
-      [Network]
-      Address={{ __host_ips.noinet }}
-
-      [Route]
-      Scope=link
-
-  - GENERAL: |
-      [Match]
-      Name=GENERAL
-
-      [Network]
-      Address={{ __host_ips.general }}
-      {% if __general_dns %}
-      DNS={{ home_net.general.cidr | ansible.utils.ipaddr('1') | ansible.utils.ipaddr('address') }}
-      DNS=1.1.1.1
-      DNS=8.8.8.8
-      {% endif %}
-
-      [Route]
-      {% if __general_route %}
-      {{ __general_route }}
-      {% else %}
-      Scope=link
-      {% endif %}
-
-  - MGMT: |
-      [Match]
-      Name=MGMT
-
-      [Network]
-      Address={{ __host_ips.mgmt }}
-      {% if __mgmt_dns %}
-      DNS={{ all_net.mgmt.cidr | ansible.utils.ipaddr('1') | ansible.utils.ipaddr('address') }}
-      DNS=1.1.1.1
-      DNS=8.8.8.8
-      {% endif %}
-
-      [Route]
-      Gateway={{ all_net.mgmt.cidr | ansible.utils.ipaddr('1') | ansible.utils.ipaddr('address') }}
-      Metric={{ __mgmt_metric }}
+networkd_config: "{{ __networkd_bond_configs + __networkd_vlan_configs + __networkd_bridge_configs }}"
