--- a/inventory/group_vars/gitlab/firewall.yml
+++ b/inventory/group_vars/gitlab/firewall.yml
@@ -31,3 +31,7 @@ firewalld_services:
   - name: samba-client
     zone: public
     state: absent
+
+mt_firewall_address_lists:
+  - address: "{{ ansible_host }}"
+    list: www
