--- a/inventory/group_vars/loki/firewall.yml
+++ b/inventory/group_vars/loki/firewall.yml
@@ -36,3 +36,7 @@ firewalld_services:
 firewall_rules:
   - port: "{{ node_exporter_port }}"
     zone: internal
+
+mt_firewall_address_lists:
+  - address: "{{ ansible_host }}"
+    list: loki
