--- a/inventory/group_vars/webgw/firewall.yml
+++ b/inventory/group_vars/webgw/firewall.yml
@@ -6,3 +6,7 @@ firewalld_masquerade_zones:
 firewalld_rich_rules:
   - zone: public
     rich_rule: "rule family=ipv4 destination address={{ ansible_host }} forward-port port=22 protocol=tcp to-port=22 to-addr={{ hostvars['gitlab01'].ansible_host }}"
+
+mt_firewall_address_lists:
+  - address: "{{ wireguard_ip | default(ansible_host) }}"
+    list: allow-www
